--- a/my-first-website.html
+++ b/my-first-website.html
@@ -4,7 +4,9 @@
 	<title>my first webpage!</title>
 </head>
 <body>
-<p>hello,world</p>
-<p>welcome to my first webpage</p>
+	<h1>My First Webpage</h1>
+    <h2>Written with a little guidance from Moringa School</h2>
+    <p>hello,world</p>
+    <p>welcome to my first webpage</p>
 </body>
 </html>
