add list elements

--- a/my-first-website.html
+++ b/my-first-website.html
@@ -8,5 +8,11 @@
     <h2>Written with a little guidance from Moringa School</h2>
     <p>hello,world</p>
     <p>welcome to my first webpage</p>
+      <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>And a lot more!</li>
+    </ul>
 </body>
 </html>
