--- a/my-first-website.html
+++ b/my-first-website.html
@@ -8,6 +8,7 @@
     <h2>Written with a little guidance from Moringa School</h2>
     <p>hello,world</p>
     <p>welcome to my first webpage</p>
+    <p>Welcome to my <strong>first web page</strong>!</p>
       <ul>
       <li>HTML</li>
       <li>CSS</li>
