--- a/my-first-website.html
+++ b/my-first-website.html
@@ -15,5 +15,6 @@
       <li>JavaScript</li>
       <li>And a lot more!</li>
     </ul>
+    <p>check out <a href="http://moringaschool.com/">moringa school</a>It's a great place to learn web development skills!</p>
 </body>
 </html>
