--- a/my-first-website.html
+++ b/my-first-website.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>my first webpage!</title>
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 	<h1>My First Webpage</h1>
@@ -16,5 +17,7 @@
       <li>And a lot more!</li>
     </ul>
     <p>check out <a href="http://moringaschool.com/">moringa school</a>It's a great place to learn web development skills!</p>
+    <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
+    <img src="images/elephantt.jpg">
 </body>
 </html>
